--- a/book/lab/lab5.html
+++ b/book/lab/lab5.html
@@ -170,18 +170,41 @@
 <p>你有两周时间完成这个实验。</p>
 <h2 id="评分标准"><a class="header" href="#评分标准">评分标准</a></h2>
 <ul>
-<li>你的代码将在 OJ 上运行，并记录执行过的指令的加权总数量。
-<ul>
-<li>每一次条件跳转将被记录为 <strong>3</strong> 条指令；</li>
-<li>每一次非条件跳转将被记录为 <strong>2</strong> 条指令；</li>
-<li>在以上两条的基础上，<strong>不计入</strong>跳转目标的基本块为当前基本块的后继的指令；</li>
-<li>每一次未执行的跳转将被记录为 <strong>1</strong> 条指令；</li>
-<li>每一次有 n 个参数的函数调用将被记录为 <strong>(n + 1) * 2</strong> 条指令；</li>
-<li>其他指令的数量不变。</li>
-</ul>
-</li>
+<li>你的代码将在 OJ 上运行，并记录执行过的指令的加权总数量。加权的方式见下方说明。</li>
 <li>你每一个测试点的最终得分是 <strong>参考实现的指令数量 / 你的指令数量 * 测试点基础分</strong>。</li>
 </ul>
+<h3 id="加权方式"><a class="header" href="#加权方式">加权方式</a></h3>
+<p>运算指令：</p>
+<table><thead><tr><th>指令</th><th align="right">权重</th></tr></thead><tbody>
+<tr><td>加法</td><td align="right">1</td></tr>
+<tr><td>减法</td><td align="right">1</td></tr>
+<tr><td>移位</td><td align="right">1</td></tr>
+<tr><td>乘法 <sup class="footnote-reference"><a href="#arith">1</a></sup></td><td align="right">3</td></tr>
+<tr><td>除法 <sup class="footnote-reference"><a href="#arith">1</a></sup></td><td align="right">7</td></tr>
+</tbody></table>
+<p>跳转指令：</p>
+<table><thead><tr><th>指令</th><th align="right">权重</th></tr></thead><tbody>
+<tr><td>条件跳转</td><td align="right">5</td></tr>
+<tr><td>非条件跳转</td><td align="right">3</td></tr>
+<tr><td>(跳转目标是当前的下一个基本块)<sup class="footnote-reference"><a href="#jump">2</a></sup></td><td align="right">1</td></tr>
+<tr><td>(距离上次跳转 n 条指令, n &lt; 8)<sup class="footnote-reference"><a href="#jump">2</a></sup></td><td align="right">额外加 8-n</td></tr>
+</tbody></table>
+<p>其他指令：</p>
+<table><thead><tr><th>指令</th><th align="right">权重</th></tr></thead><tbody>
+<tr><td>Phi <sup class="footnote-reference"><a href="#phi">3</a></sup></td><td align="right">0</td></tr>
+<tr><td>赋值</td><td align="right">0</td></tr>
+<tr><td>函数调用, n 个参数</td><td align="right">n*2 + 7</td></tr>
+<tr><td>其他</td><td align="right">1</td></tr>
+</tbody></table>
+<div class="footnote-definition" id="arith"><sup class="footnote-definition-label">1</sup>
+<p>这是为了模仿现代处理器的特点。现代处理器中，乘除法运算需要消耗的时钟周期长于加减法。例如，ARMv7 架构的 Cortex-A73 处理器中加减法指令消耗 1 个时钟周期，乘法约 3 -- 5 个时钟周期，除法约 10 -- 15 个。</p>
+</div>
+<div class="footnote-definition" id="jump"><sup class="footnote-definition-label">2</sup>
+<p>这是为了模仿现代处理器的特点。现代处理器通常具有很长的流水线（快回去看 CSAPP），连续跳转时可能需要重新填满整个流水线，最多可能要消耗十几个时钟周期。当然，作为一个简化的判断标准，这里没有模拟分支预测的成功与失败的情况，而是用一个固定的值提示你少跳转。</p>
+</div>
+<div class="footnote-definition" id="phi"><sup class="footnote-definition-label">3</sup>
+<p>Phi 指令本质上只是一个赋值，在真实的编译器中通过寄存器分配等操作可以基本消除掉，因此不计入指令总数。</p>
+</div>
 
                     </main>
 
